added put methods

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,95 @@ body {
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+#specialImage {
+	max-height: 100%;
+	display: inline-block;
+}
+#landscape {
+	height: 250px;
+	width: auto;
+	display: inline-block;
+	margin: 1%;
+	/* border: solid 5px rgb(82, 78, 78); */
+	border-radius: 8px;
+	/* box-shadow: 5px 5px 5px rgb(90, 89, 89); */
+}
+.picturesContainer {
+	background-color: rgba(128, 128, 128, 0.146);
+	text-align: center;
+	/* margin-left: 5%; */
+	/* margin-right: 10%; */
+	margin: 0 auto;
+	width: 100%;
+	border-radius: 8px;
+	border-color: white;
+	box-shadow: 5px 5px 5px gray;
+	margin-bottom: 5%;
+	border: white 20px solid;
+	margin-top: 0;
+}
+#picsHeader {
+	background-color: #db143b;
+	color: white;
+	border-radius: 8px;
+	border: 5px solid #db143b;
+	margin-top: 0;
+	padding-left: 6%;
+	padding-right: 6%;
+	width: auto;
+	text-align: center;
+	/* margin-bottom: 0; */
+}
+.compartment {
+	background-color: rgba(128, 128, 128, 0.146);
+	border-radius: 8px;
+	border-color: white;
+	box-shadow: 5px 5px 5px gray;
+	margin-bottom: 5%;
+	/* padding-block-start: 5%; */
+	padding-top: 0;
+	/* width: auto; */
+	/* padding-right: 14%; */
+}
+#compartment {
+	width: 100%;
+}
+#compartmentHeader {
+	background-color: #db143b;
+	color: white;
+	border-radius: 8px;
+	/* border: 5px solid #db143b; */
+	margin-top: 0;
+	/* padding-left: 6%;
+	padding-right: 6%; */
+	width: 100%;
+	text-align: center;
+	/* margin-bottom: 0; */
+}
+li {
+	margin-bottom: 3%;
+	padding-bottom: 5%;
+}
+#columnl {
+	/* margin-right: 6%;
+  margin-left: 10%; */
+	/* margin: 0 auto; */
+	margin: 5%;
+}
+#columnr {
+	/* margin-left: 0%;
+  margin-right: 10%; */
+	margin: 5%;
+}
+#columnm {
+	/* margin-right: 6%; */
+	margin: 5%;
+}
+.climateDescription {
+	margin: 0 auto;
+	text-align: center;
+	padding-bottom: 3%;
+}
+a:hover {
+	color: #db143b;
+}
