--- a/src/App.css
+++ b/src/App.css
@@ -19,21 +19,22 @@ body {
 .browseHeadings {
 	color: rgb(57, 52, 52);
 	text-align: center;
+	text-transform: capitalize;
 }
 .readContainer {
 	display: flex;
 	/* flex-wrap: wrap; */
 	justify-content: center;
-	justify-content: space-evenly;
+	/* justify-content: space-between; */
+	margin: 0auto;
 }
 .browseTitle {
-	color: rgb(131, 10, 10);
+	color: #db143b;
 	font-size: 40px;
 	font-weight: 900em;
 }
 .center {
 	margin: 0 auto;
-	text-align: center;
 }
 .searchCountryField {
 	height: 75px;
@@ -41,7 +42,36 @@ body {
 	font-size: 30px;
 	font-style: italic;
 	text-align: center;
+	margin-left: 35%;
 }
 .searchHeading {
 	margin-top: 5%;
+	color: #db143b;
+	text-align: center;
+}
+.black:hover {
+	color: #db143ca5;
+}
+.black {
+	color: #39343484;
+	margin-right: 1%;
+}
+.oneline {
+	display: flex;
+	justify-content: center;
+	flex-direction: row;
+}
+.smallInput {
+	width: 70%;
+	margin-left: 5%;
+	text-align: center;
+	font-style: italic;
+}
+.plus {
+	font-size: 30px;
+	height: 20px;
+	color: #39343484;
+}
+.mainDelete {
+	margin-left: 1%;
 }
