--- a/src/Components/Contribute.css
+++ b/src/Components/Contribute.css
@@ -23,6 +23,7 @@ input {
 }
 .white {
 	text-align: center;
+	text-transform: capitalize;
 }
 h3 {
 	text-align: center;
@@ -36,5 +37,8 @@ h4 {
 	text-align: center;
 }
 .red {
-	color: rgb(155, 17, 17);
+	color: #db143b;
 }
+/* input {
+	text-transform: capitalize;
+} */
