--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,21 +1,79 @@
 .mainTitle {
 	/* margin-top: 15%; */
 	font-size: 60px;
-	padding-left: 15%;
+	/* padding-left: 15%; */
+	text-align: center;
 }
 h4 {
 	font-size: 20px;
-	margin-right: 10%;
-	color: rgb(131, 10, 10);
-	margin-bottom: 8%;
+	margin-right: 7%;
+	color: #db143b;
+	/* margin-bottom: 8%; */
 }
 img {
 	text-align: right;
 }
 .mainTitleContainer {
-	margin-top: 15%;
-	border: 5px solid gray;
-	border-radius: 8px;
-	width: 40%;
-	margin-left: 30%;
+	margin-top: 10%;
+	/* border: 5px solid gray;
+	border-radius: 8px; */
+	/* width: 40%; */
+	margin-left: 6%;
+	margin-bottom: 5%;
+}
+.infoBox1 {
+	background-color: #db143b;
+	/* display: inline-block; */
+	height: 300px;
+	width: 350px;
+	margin: 2%;
+	border-radius: 10px;
+	box-shadow: 5px 5px 5px #39343458;
+}
+.infoBox2 {
+	background-color: #db143b;
+	/* display: inline-block; */
+	height: 300px;
+	width: 350px;
+	/* display: flex;
+	justify-content: center; */
+	margin: 2%;
+	border-radius: 10px;
+	box-shadow: 5px 5px 5px #39343458;
+}
+.infoBox3 {
+	background-color: #db143b;
+	/* display: inline-block; */
+	height: 300px;
+	width: 350px;
+	margin: 2%;
+	/* display: flex;
+	justify-content: center; */
+	border-radius: 10px;
+	box-shadow: 5px 5px 5px #39343458;
+}
+.mainPageIcon {
+	text-align: center;
+	font-size: 50px;
+	color: white;
+	margin-top: 5%;
+	display: block;
+	margin-left: 45%;
+}
+.description {
+	display: flex;
+	justify-content: center;
+	flex-direction: row;
+	color: white;
+}
+#mainPageSubheadings {
+	color: white;
+	/* align-self: auto; */
+	display: block;
+	margin-left: 2%;
+	text-align: center;
+}
+#smallBug {
+	height: 25px;
+	width: 20px;
 }
